disabling spring security for actuator

--- a/order-service.yml
+++ b/order-service.yml
@@ -1,5 +1,12 @@
 ---
-user:
-  discountFactor: 5
-server:
-  port: 4040
+spring:
+  application:
+    name: order-service
+  cloud:
+    config:
+      uri: http://localhost:5050
+      enabled: true
+      
+management:
+  security:
+    enabled: false
