--- a/order-service.yml
+++ b/order-service.yml
@@ -1,12 +1,5 @@
 ---
-spring:
-  application:
-    name: order-service
-  cloud:
-    config:
-      uri: http://localhost:5050
-      enabled: true
-      
-management:
-  security:
-    enabled: false
+user:
+  discountFactor: 4
+server:
+  port: 4040
